--- a/app.json
+++ b/app.json
@@ -1,14 +1,14 @@
 {
   "expo": {
-    "name": "social-games",
-    "slug": "social-games",
+    "name": "جمعتنا",
+    "slug": "جمعتنا",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/logo.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
-      "image": "./assets/splash-icon.png",
+      "image": "./assets/logo.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
