--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.15.2",
     "react-native-svg": "^15.12.1",
-    "react-native-vector-icons": "^10.3.0"
+    "react-native-vector-icons": "^10.3.0",
+    "react-native-worklets": "^0.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
