--- a/package.json
+++ b/package.json
@@ -13,18 +13,19 @@
     "@react-navigation/drawer": "^7.5.7",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.25",
-    "expo": "~53.0.22",
-    "expo-status-bar": "~2.2.3",
+    "babel-preset-expo": "~54.0.0",
+    "expo": "~54.0.0",
+    "expo-status-bar": "~3.0.8",
     "i18n-js": "^4.5.1",
-    "react": "19.0.0",
-    "react-native": "0.79.6",
+    "react": "19.1.0",
+    "react-native": "0.81.4",
     "react-native-paper": "^5.14.5",
-    "react-native-reanimated": "^4.0.2",
-    "react-native-safe-area-context": "^5.6.1",
-    "react-native-screens": "^4.15.2",
-    "react-native-svg": "^15.12.1",
+    "react-native-reanimated": "~4.1.0",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
     "react-native-vector-icons": "^10.3.0",
-    "react-native-worklets": "^0.5.0"
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
